--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Description: executables for the KDE Activities
  This package is part of the Plasma Contour Active Platform.
 
 Package: libkactivities6
+Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libkactivities-bin (= ${binary:Version})
 Description: Activities library
