--- a/debian/control
+++ b/debian/control
@@ -48,6 +48,8 @@ Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, libkactivities6 (= ${binary:Version})
+Breaks: kde-runtime-dbg (<< 4:4.8)
+Replaces: kde-runtime-dbg (<< 4:4.8)
 Suggests: libkactivities-bin (= ${binary:Version})
 Description: debugging symbols for libkactivities
  This library provides functionality for managing activities.
