--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,10 @@ Vcs-Git: git://git.debian.org/pkg-kde/kde-sc/kactivities.git
 Package: libkactivities-bin
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: kde-runtime (<< 4:4.8), kde-runtime-data (<< 4:4.8)
-Replaces: kde-runtime (<< 4:4.8), kde-runtime-data (<< 4:4.8)
+Breaks: kde-runtime (<< 4:4.8), kde-runtime-data (<< 4:4.8),
+ kdebase-runtime (<< 4:4.8), kdebase-runtime-data (<< 4:4.8)
+Replaces: kde-runtime (<< 4:4.8), kde-runtime-data (<< 4:4.8),
+ kdebase-runtime (<< 4:4.8), kdebase-runtime-data (<< 4:4.8)
 Description: executables for the KDE Activities
  This package contains binary files shipped with the KDE Activities library.
  .
@@ -48,8 +50,8 @@ Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, libkactivities6 (= ${binary:Version})
-Breaks: kde-runtime-dbg (<< 4:4.8)
-Replaces: kde-runtime-dbg (<< 4:4.8)
+Breaks: kde-runtime-dbg (<< 4:4.8), kdebase-runtime-dbg (<< 4:4.8)
+Replaces: kde-runtime-dbg (<< 4:4.8), kdebase-runtime-dbg (<< 4:4.8)
 Suggests: libkactivities-bin (= ${binary:Version})
 Description: debugging symbols for libkactivities
  This library provides functionality for managing activities.
