--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends:
  libqt4-opengl-dev,
  kdelibs5-dev (>= 4:4.9.80),
  libsoprano-dev,
+ nepomuk-core-dev,
  shared-desktop-ontologies (>= 0.8.1)
 Standards-Version: 3.9.3
 Homepage: http://www.kde.org/
@@ -34,6 +35,15 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libkactivities-bin (= ${binary:Version})
 Description: Activities library
  This library provides functionality for managing activities.
+ .
+ This package is part of the KDE Development Platform libraries module.
+
+Package: libkactivities-models1
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libkactivities-bin (= ${binary:Version})
+Description: Activities models library
+ This library provides functionality for KDE activity models.
  .
  This package is part of the KDE Development Platform libraries module.
 
