--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends:
  libqt4-opengl-dev,
  kdelibs5-dev (>= 4:4.9.80),
  libsoprano-dev,
- nepomuk-core-dev,
+ nepomuk-core-dev (>= 4:4.9.80),
  shared-desktop-ontologies (>= 0.8.1)
 Standards-Version: 3.9.3
 Homepage: http://www.kde.org/
