--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Eshat Cakar <info@eshat.de>,
  Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>
 Build-Depends: kde-sc-dev-latest (>= 4:4.10.0),
  cmake, debhelper (>= 7.3.16), pkg-kde-tools (>= 0.12),
- kdelibs5-dev (>= 4:4.10),
+ kdelibs5-dev (>= 4:4.10), nepomuk-core-dev (>= 4:4.10),
  libsoprano-dev,
  shared-desktop-ontologies (>= 0.8.1),
  libx11-dev,
