--- a/debian/control
+++ b/debian/control
@@ -51,7 +51,7 @@ Description: Activities models library
 Package: libkactivities-dev
 Section: libdevel
 Architecture: any
-Depends: libkactivities6 (= ${binary:Version}), ${misc:Depends},
+Depends: ${allLibraries}, ${misc:Depends},
  ${sameVersionDep:kdelibs5-dev:libkactivities6}
 Description: development files for the KDE Activities libraries
  This package contains the development files for developing with the
@@ -63,7 +63,7 @@ Package: libkactivities-dbg
 Section: debug
 Architecture: any
 Priority: extra
-Depends: ${misc:Depends}, libkactivities6 (= ${binary:Version})
+Depends: ${allLibraries}, ${misc:Depends}
 Breaks: kde-runtime-dbg (<< 4:4.8), kdebase-runtime-dbg (<< 4:4.8)
 Replaces: kde-runtime-dbg (<< 4:4.8), kdebase-runtime-dbg (<< 4:4.8)
 Suggests: libkactivities-bin (= ${binary:Version})
