--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Eshat Cakar <info@eshat.de>,
- José Manuel Santamaría Lema <panfaust@gmail.com>,
  Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
- Sune Vuorela <sune@debian.org>
+ Sune Vuorela <sune@debian.org>,
+ Maximiliano Curia <maxy@debian.org>
 Build-Depends: kde-sc-dev-latest (>= 4:4.10.1),
  cmake, debhelper (>= 9), pkg-kde-tools (>= 0.15.4~),
  kdelibs5-dev (>= 4:4.10), nepomuk-core-dev (>= 4:4.10),
