--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: kde-sc-dev-latest (>= 4:4.11),
  libx11-dev,
  libqt4-opengl-dev
 Standards-Version: 3.9.4
+XS-Testsuite: autopkgtest
 Homepage: http://www.kde.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kactivities.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kactivities.git
