Copyright and Description
removed:
  debian/TODO.packaging
modified:
  debian/control
  debian/copyright
  debian/watch

--- a/debian/control
+++ b/debian/control
@@ -16,31 +16,25 @@ Package: libkf5activities-dev
 Section: libdevel
 Architecture: any
 Depends: libkf5activities4 (= ${binary:Version}), ${misc:Depends}
-Description: development files for kconfigwidgets
- KConfigWidgets provides easy-to-use classes to create 
- configuration dialogs, as well as a set of widgets which 
- uses KConfig to store their settings.
+Description: development files for kactivities.
+ This library provides functionality for managing Activities.
  .
- Contains development files for kconfigwidgets.
+ Contains development files for kactivities.
  
 Package: libkf5activities4
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Extra widgets for easier configuration support.
- KConfigWidgets provides easy-to-use classes to create 
- configuration dialogs, as well as a set of widgets which 
- uses KConfig to store their settings.
+Description: Library to organize the user work in separate activities.
+ This library provides functionality for managing Activities.
 
 Package: kactivities
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libkactivities-bin
-Description: Extra widgets for easier configuration support.
- KConfigWidgets provides easy-to-use classes to create 
- configuration dialogs, as well as a set of widgets which 
- uses KConfig to store their settings.
+Description: Runtime to organize the user work in separate activities.
+ This library provides functionality for managing Activities.
 
 Package: libkf5activities4-dbg
 Priority: extra
@@ -48,8 +42,6 @@ Section: debug
 Architecture: any
 Depends: libkf5activities4 (= ${binary:Version}), ${misc:Depends}
 Description: debug symbols for kactivities
- KConfigWidgets provides easy-to-use classes to create 
- configuration dialogs, as well as a set of widgets which 
- uses KConfig to store their settings.
+ This library provides functionality for managing Activities.
  .
- Contains debug symbols for kconfigwidgets.
+ Contains debug symbols for kactivities.
