--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,7 @@ Package: libkf5activities5
 Section: libdevel
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Multi-Arch: same
 Description: Library to organize the user work in separate activities.
  This library provides functionality for managing Activities.
 Pre-Depends: ${misc:Pre-Depends}
