--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: cmake,
                debhelper (>= 9.0.0),
                extra-cmake-modules (>= 0.0.14),
                libboost-dev,
-               kf5-kio-dev (>= 4.100.0),
+               kio-dev (>= 4.100.0),
                libkf5config-dev (>= 4.100.0),
                libkf5coreaddons-dev (>= 4.100.0),
                libkf5dbusaddons-dev (>= 4.100.0),
