--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends: cmake,
                libkf5kjs-dev (>= 5.2.0),
                libkf5service-dev (>= 5.2.0),
                libkf5windowsystem-dev (>= 5.2.0),
-               pkg-kde-tools,
+               pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev,
                qtdeclarative5-dev
 Standards-Version: 3.9.5
