--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Build-Depends: cmake (>= 2.8.11),
                qtbase5-dev (>= 5.2.0),
                qtdeclarative5-dev
 Standards-Version: 3.9.6
+XS-Testsuite: autopkgtest
 Homepage: https://projects.kde.org/projects/kde/kdelibs/kactivities
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/frameworks/kactivities.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kactivities.git
