--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: cmake,
                libkf5i18n-dev (>= 5.7.0),
                libkf5kcmutils-dev (>= 5.7.0),
                libkf5kjs-dev (>= 5.7.0),
+               libkf5package-dev (>= 5.7.0),
                libkf5service-dev (>= 5.7.0),
                libkf5windowsystem-dev (>= 5.7.0),
                pkg-kde-tools (>= 0.15.15ubuntu1~),
