--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Multi-arch: same
 Priority: extra
 Section: debug
 Depends: libkf5activities5 (= ${binary:Version}), ${misc:Depends}
+Recommends: qtbase5-dbg
 Description: debug symbols for kactivities
  This library provides functionality for managing Activities.
  .
