revise qml module
- rename package to actually match module name
- runtime kactivities depends on the qml module due to upstream changes

--- a/debian/control
+++ b/debian/control
@@ -45,16 +45,26 @@ Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Library to organize the user work in separate activities.
  This library provides functionality for managing Activities.
 
-Package: qml-module-org-kde-extensionplugin
+Package: qml-module-org-kde-activities
 Architecture: any
 Multi-arch: same
 Depends: libkf5activities5 (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Breaks: libkf5activities5 (<< 5.1.0-0ubuntu1)
-Replaces: libkf5activities5 (<< 5.1.0-0ubuntu1)
-Description: provides integration of QML and KDE Frameworks - extensionplugin
+Breaks: libkf5activities5 (<< 5.1.0-0ubuntu1),
+        qml-module-org-kde-extensionplugin (<< 5.13.0+git20150826.0700)
+Replaces: libkf5activities5 (<< 5.1.0-0ubuntu1),
+          qml-module-org-kde-extensionplugin (<< 5.13.0+git20150826.0700)
+Description: provides integration of QML and KDE Frameworks
  This import contains KDE extras that are visually similar to Qt Quick
  Controls.
  .
  This package contains the QML files used by libkf5declarative.
+
+Package: qml-module-org-kde-extensionplugin
+Depends: qml-module-org-kde-activities, ${misc:Depends}
+Architecture: all
+Priority: extra
+Section: oldlibs
+Description: transitional dummy package
+ This is a transitional dummy package. It can safely be removed.
